--- a/render.yaml
+++ b/render.yaml
@@ -5,9 +5,9 @@ services:
     env: node
     region: oregon
     plan: free
-    # Final solution - use a simple server that hands off to the real server
+    # Confirm both the server file and simple-server start correctly
     buildCommand: "PORT=10000 npm install && PORT=10000 npm run build:render:direct"
-    startCommand: "PORT=10000 node simple-server.js"
+    startCommand: "ls -la && PORT=10000 node simple-server.js || PORT=10000 node server.js"
     # Heath check path that the root server will respond to
     healthCheckPath: /
     # Explicitly set PORT to 10000 as required by Render
